build_errors.log
make  all-recursive
make[1]: Entering directory '/root/nexa-core'
Making all in src
make[2]: Entering directory '/root/nexa-core/src'
depbase=`echo main.o | sed 's|[^/]*$|.deps/&|;s|\.o$||'`;\
g++ -DHAVE_CONFIG_H -I. -I..     -g -O2 -MT main.o -MD -MP -MF $depbase.Tpo -c -o main.o main.cpp &&\
mv -f $depbase.Tpo $depbase.Po
depbase=`echo network/network.o | sed 's|[^/]*$|.deps/&|;s|\.o$||'`;\
g++ -DHAVE_CONFIG_H -I. -I..     -g -O2 -MT network/network.o -MD -MP -MF $depbase.Tpo -c -o network/network.o network/network.cpp &&\
mv -f $depbase.Tpo $depbase.Po
network/network.cpp:7:7: error: redefinition of ‘class PeerManager’
    7 | class PeerManager {  // Define PeerManager class
      |       ^~~~~~~~~~~
In file included from network/network.cpp:1:
network/network.h:7:7: note: previous definition of ‘class PeerManager’
    7 | class PeerManager {
      |       ^~~~~~~~~~~
main.cpp: In function ‘int main()’:
main.cpp:5:5: error: ‘nexa’ has not been declared
    5 |     nexa::Governance dao;  // Use the correct namespace
      |     ^~~~
main.cpp:6:5: error: ‘dao’ was not declared in this scope
    6 |     dao.createProposal("increase_block_size");
      |     ^~~
make[2]: *** [Makefile:423: main.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [Makefile:423: network/network.o] Error 1
make[2]: Leaving directory '/root/nexa-core/src'
make[1]: *** [Makefile:490: all-recursive] Error 1
make[1]: Leaving directory '/root/nexa-core'
make: *** [Makefile:326: all] Error 2
